FIx TryGhost/Ghost#8896 double scrollbar

--- a/app/styles/layouts/settings.css
+++ b/app/styles/layouts/settings.css
@@ -276,6 +276,12 @@
     border-radius: inherit;
 }
 
+/* Fixes issue 8896 */
+.settings-code-editor .CodeMirror-scroll {
+   overflow: hidden !important;
+   margin-right: 0;
+}
+
 .settings-code-editor .cm-s-xq-light span.cm-meta {
     color: #000;
 }
